--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "express": "~4.9.0",
     "jade": "^1.7.0",
     "less-middleware": "1.0.x",
+    "lodash": "^2.4.1",
     "mongoose": "^3.8.18"
   }
 }
