--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "jade": "^1.7.0",
     "less-middleware": "1.0.x",
     "lodash": "^2.4.1",
-    "mongoose": "^3.8.18"
+    "mongoose": "^3.8.18",
+    "socket.io": "^1.2.0"
   }
 }
