--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "async": "^0.9.0",
     "d3": "^3.4.13",
+    "d3.layout.cloud": "^1.0.5",
     "express": "~4.9.0",
     "jade": "^1.7.0",
     "less-middleware": "1.0.x",
