--- a/package.json
+++ b/package.json
@@ -7,13 +7,12 @@
   },
   "dependencies": {
     "async": "^0.9.0",
-    "d3": "^3.4.13",
-    "d3.layout.cloud": "^1.0.5",
     "express": "~4.9.0",
     "jade": "^1.7.0",
     "less-middleware": "1.0.x",
     "lodash": "^2.4.1",
     "mongoose": "^3.8.18",
+    "restler": "^3.2.2",
     "socket.io": "^1.2.0"
   }
 }
